@@ -32,7 +32,4 @@ gnome-corba-rexec-common.c
 gnome-corba-rexec.h
 gnome-remote-bootstrap
 gnome-rexec-server
-gnomemarshal.h
-gnomemarshal.c
-stamp-gnomemarshal.h
 libgnomeui-2.0.pc
